# kp

./: pyproject.toml
administration/: AdminKafka.py  Test.py  create_topic.py
docker-files/: Readme  docker-compose-postgres.yml  docker-compose-single.yml
esiotort/: _models_.py  init.py  main.py  main2.py
esiotort/domain/: mymods.py
